typescript/checker/tests/conformance/enums/enumBasics.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            175,
        ),
        hi: BytePos(
            177,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/enums/enumBasics.ts:9:17
  |
9 | var x: number = E1.A;
  |                 ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            279,
        ),
        hi: BytePos(
            281,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/enums/enumBasics.ts:12:9
   |
12 | var e = E1;
   |         ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            288,
        ),
        hi: BytePos(
            289,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/enums/enumBasics.ts:13:5
   |
13 | var e: {
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            406,
        ),
        hi: BytePos(
            407,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/enums/enumBasics.ts:19:5
   |
19 | var e: typeof E1;
   |     ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            492,
        ),
        hi: BytePos(
            494,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/enums/enumBasics.ts:22:9
   |
22 | var s = E1[e.A];
   |         ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            506,
        ),
        hi: BytePos(
            507,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/enums/enumBasics.ts:23:5
   |
23 | var s: string;
   |     ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1395,
        ),
        hi: BytePos(
            1397,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/enums/enumBasics.ts:73:5
   |
73 |     E8.B, E7.A, E4.Z, E3.X, E3.Y, E3.Z
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1505,
        ),
        hi: BytePos(
            1507,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/enums/enumBasics.ts:77:5
   |
77 |     E9.A, E9.B, E6.B, E6.C, E6.A, E5.A, E5.B, E5.C
   |     ^^

